--- a/Tic-Tac-Teo/index.html
+++ b/Tic-Tac-Teo/index.html
@@ -20,6 +20,6 @@
     </div>
     <button id="reset-btn">Reset Game</button>
     </main>
-    <script src="Lecture9.js"></script>
+    <script src="code.js"></script>
 </body>
 </html>
