--- a/Netflix-clone/index.html
+++ b/Netflix-clone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="Netflix.css" media="">
+    <link rel="stylesheet" href="style.css" media="">
 </head>
 <body>
     <div class="main">
