--- a/Netflix-clone/index.html
+++ b/Netflix-clone/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <nav class="nav">
-            <span> <img src="assets/Netflix_Logo_PMS.png" alt="" class="img"></span>
+            <span> <img src="Netflix_Logo_PMS.png" alt="" class="img"></span>
         <div class="nav-bar">
             <select class="select">
                 <option value="English">English</option>
@@ -43,13 +43,13 @@
         </span>
        </div>
        <div class="vedio">
-       <img src="assets/tv.png" alt="">
+       <img src="tv.png" alt="">
        <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"></video>
        </div>
     </div>
     <div class="box-1">
         <div class="sec-vedio">
-          <img src="assets/mobile-0819.jpg" alt="">
+          <img src="mobile-0819.jpg" alt="">
         </div>
         <div class="sec-heading">
          <h1 class="text">Download your shows to watch offline</h1>
@@ -67,12 +67,12 @@
          </span>
         </div>
         <div class="first-vedio">
-          <img src="assets/device-pile-in.png" width="550px" style="margin: 30px;">
+          <img src="device-pile-in.png" width="550px" style="margin: 30px;">
         </div>
      </div>
      <div class="box-1">
         <div class="sec-vedio">
-        <img src="assets/children.png" alt="">
+        <img src="children.png" alt="">
         </div>
         <div class="sec-heading">
          <h1 class="text">Create profiles for kids</h1>
